# MLOpsScoreBack

./: .env  Dockerfile  README.md  amazon.txt  create_platforms_schema.sql  create_schema.sql  create_scores_schema.sql  create_services_schema.sql  create_state_schema.sql  main.py  neon.ipynb  pyproject.toml  requirements.txt  score.py  settings.py  slack.ipynb  slack.json  state.ipynb
cache/: cache.py
controller/: base.py  platform.py  scores.py  state.py
login/: slack.py
model/: __init__.py  paginate.py  platform.py  score.py  search.py  state.py
routers/: __init__.py  login.py  platform.py  score.py
sql_model/: platforms.py  scores.py  state.py
sql_model/util/: convert.py
